# fintech

./: .env.example  .gitignore  DESIGN_JOURNAL.MD  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/config/: settings.py
app/domain/: README.md  balance.py  ledger.py  merchant.py  money.py  payment.py
app/infrastructure/db/: client.py  exceptions.py  schemas.py
app/infrastructure/logging/: config.py
app/security/: README.md
tests/: README.md  test_db_client.py  test_money.py  test_payment.py  test_settings.py
